# IndustrialMould

./: CMakeLists.txt  main.cpp
DrawingProcess/: CuttingEdgeAndPunchingRoundHoles.cpp  CuttingEdgeAndPunchingRoundHoles.h  Drawing.cpp  Drawing.h  DrawingProcess.cpp  DrawingProcess.h  FlangingSizing.cpp  FlangingSizing.h
